<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoView"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/localSurfaceViewRenderer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="200dp" />

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/removeSurfaceViewRenderer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/localSurfaceViewRenderer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/callerNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_spacing_l"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/callStatusImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/empty_string" />

    <ImageView
        android:id="@+id/callStatusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/call_status_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_calling" />

    <TextView
        android:id="@+id/callStatusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_spacing_l"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/callStatusImageView"
        tools:text="@string/empty_string" />

    <TextView
        android:id="@+id/buttonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_spacing_l"
        android:background="@drawable/shape_square_blue"
        android:paddingStart="@dimen/global_spacing_s"
        android:paddingTop="@dimen/global_spacing_xxs"
        android:paddingEnd="@dimen/global_spacing_s"
        android:paddingBottom="@dimen/global_spacing_xxs"
        android:text="@string/empty_string"
        android:textColor="@color/ak_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/callStatusTextView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/callStatusGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="callerNameTextView,callStatusImageView,callStatusTextView,buttonTextView"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/openDoorCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/openDoorTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_spacing_l"
                android:drawableBottom="@drawable/ic_open_door"
                android:gravity="center"
                android:text="@string/call_open_door_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/callStatusImageView" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>